--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://Cr0ustillant.github.io/Mon-Portfolio",
+  "homepage": "https://Cr0ustillant.github.io/Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
